@@ -1,3 +1,12 @@
+2006-03-11  Eric Botcazou  <ebotcazou@adacore.com>
+
+	Backport from mainline:
+	2006-02-13  Ed Schonberg  <schonberg@adacore.com>
+	PR ada/25885
+	* sem_res.adb (Set_Literal_String_Subtype): If the lower bound is not
+	static, wrap the literal in an unchecked conversion, because GCC 4.x
+	needs a static value for a string bound.
+
 2006-03-09  Release Manager
 
 	* GCC 4.0.3 released.
